Fixed side bar almost to compeletion, fixed the animations and made sure if it did get stuck it fixed itself.

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -54,7 +54,7 @@
   color: #DEDEDE;
 }
 p.offWhite {
-    font-size: 10px;
+  font-size: 10px;
 }
 .icon-group {
   background: black;
@@ -73,13 +73,13 @@ a {
   width: 2px;
 }
 html, body {
-    width:100%;
-    height:100%;
-    margin:0;
-    padding:0;
+  width:100%;
+  height:100%;
+  margin:0;
+  padding:0;
 }
 body {
-    position: relative;
+  position: relative;
 }
 .fa {
   margin:0;
@@ -88,4 +88,18 @@ body {
 hr {
   margin:0;
   padding:0;
+}
+p.side-bar-text {
+  display: inline;
+  font-size: 15%;
+  margin:0;
+  padding:0;
+}
+p {
+  display: inline;
+  margin:0;
+  padding:0;
+}
+* {
+  font-family: Verdana, Geneva, sans-serif;
 }
